Fixed alternate dns names

--- a/ssl.conf
+++ b/ssl.conf
@@ -1,6 +1,7 @@
 [ req ]
 default_bits       = 4096
 distinguished_name = req_distinguished_name
+req_extensions     = v3_req
 
 [ req_distinguished_name ]
 countryName                 = Country Name (2 letter code)
@@ -9,3 +10,8 @@ localityName                = Locality Name (eg, city)
 organizationName            = Organization Name (eg, company)
 commonName                  = Common Name (e.g. server FQDN or YOUR name)
 commonName_max              = 64
+
+[ v3_req ]
+basicConstraints = CA:FALSE
+keyUsage         = keyEncipherment, dataEncipherment
+extendedKeyUsage = serverAuth
