Fix for multi DNS certificates

--- a/ssl.conf
+++ b/ssl.conf
@@ -12,6 +12,6 @@ commonName                  = Common Name (e.g. server FQDN or YOUR name)
 commonName_max              = 64
 
 [ v3_req ]
-basicConstraints = CA:FALSE
-keyUsage         = keyEncipherment, dataEncipherment
+basicConstraints = critical,CA:TRUE,pathlen:1
+keyUsage         = keyEncipherment, dataEncipherment, keyCertSign
 extendedKeyUsage = serverAuth
